--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,11 @@ ul {
     font-weight: 800;
     background-color: chartreuse;
 }
+h1 {
+    text-align: center;
+    background-color: chartreuse;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+.img {
+    width:100%;
+}
