--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,23 @@
 body {
     background-image: url("https://media.giphy.com/media/Qgfz2N36MgUBG/giphy.gif");
 }
+
+  
 ul {
     list-style: none;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 800;
+    /* font-size: xx-large; */
+}
+.bottom-left{
+    font-size: xx-large;
+    font-style: italic;
+    background-color: chocolate;
+}
+.bottom-left h1 {
+    background-color: chocolate;
+    text-align: left;
+    padding-left: 20px;
 }
 .container {
     background-color: burlywood;
