--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,9 @@ h1 {
 .footer {
     background-color: burlywood;
 }
+.footer h1 {
+    font-size: xx-large;
+    font-style: italic;
+    font-weight: 800;
+    background-color:darkgreen;
+}
